# KDV.Qt_Chat-36_7-PJ-Server

./: CMakeLists.txt  KDV.Qt_Chat-36_7-PJ-Server.sln  KDV.Qt_Chat-36_7-PJ-Server.vcxproj  KDV.Qt_Chat-36_7-PJ-Server.vcxproj.filters  README.md  client.cpp  client.h  database.cpp  database.h  database_constructor.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netserver.cpp  netserver.h  server.cpp  server.h
